--- a/inception/srcs/requirements/nginx/Dockerfile
+++ b/inception/srcs/requirements/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.18.6
+FROM alpine:3.17
 
 WORKDIR /nginx
 
@@ -7,8 +7,8 @@ RUN apk update && \
     apk add --no-cache bash nginx openssl dumb-init curl
 
 RUN mkdir -p /var/www/html /etc/nginx/ssl /run/nginx && \
-    chown -R nginx:nginx /var/www/html /etc/nginx/ssl /run/nginx
-RUN curl https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh > /usr/local/bin/wait-for-it.sh && \
+    chown -R nginx:nginx /var/www/html /etc/nginx/ssl /run/nginx && \
+    curl -s -L https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh --output /usr/local/bin/wait-for-it.sh && \
     chmod +x /usr/local/bin/wait-for-it.sh
 
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
@@ -17,7 +17,7 @@ COPY ./tools/script.sh /usr/local/bin/script.sh
 
 RUN chmod +x /usr/local/bin/script.sh
 
-EXPOSE $NGINX_PORT
+# EXPOSE $NGINX_PORT
 
 ENTRYPOINT [ "/usr/bin/dumb-init", "--", "/usr/local/bin/script.sh" ]
 CMD [ "nginx", "-g", "daemon off;" ]
