--- a/inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/inception/srcs/requirements/nginx/conf/nginx.conf
@@ -12,12 +12,12 @@ events {
 http {
 	include mime.types;
 	server {
-		listen ssl;
-		listen [::]: ssl;
+		listen s ssl;
+		listen [::]: s ssl;
 		server_name jaehjoo.42.fr;
 
-		ssl_certificate;
-		ssl_certificate_key;
+		ssl_certificate s;
+		ssl_certificate_key s;
 		ssl_protocols TLSv1.3;
 
 		root /var/www/html;
@@ -29,7 +29,7 @@ http {
 
 	  	location ~ \.php$ {
         	fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass wordpress:;
+			fastcgi_pass wordpress:s;
 			fastcgi_index index.php;
 			include fastcgi.conf;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
