--- a/inception/srcs/requirements/mariadb/conf/my.cnf
+++ b/inception/srcs/requirements/mariadb/conf/my.cnf
@@ -1,13 +1,10 @@
 [mysqld]
-port
+port s
 basedir = /usr
 datadir = /var/lib/mysql
 socket = /var/run/mysqld/mysqld.sock
 skip-networking = false
 bind-address = 0.0.0.0
-
-[mysql]
-socket = /var/run/mysqld/mysqld.sock
 
 [mysqld_safe]
 log-error = /home/mysql/log/error.log
